array initialization java 8 support